<resources>
    <string name="app_name">Agri Kissan Project</string>
    <string name="Profile1">Navroop Singh is a progressive farmer with extensive years of experience in the field of dairy farming. Particularly engaged in rearing the indigenous breed- Sahiwal naturally from last 8 years he has great skills and expertise in taking good production of milk from dairy farming. Currently, the number of cows in his dairy farm exceeds 100 and most of them are of Sahiwal breed which is considered to be the best breed in India. Adept in utilizing the natural resources and waste product of cows productively in the form of Jeev Amrit, Vermicompost, and Neem spray. With a previous track record of strong marketing skills, presently he is running his own milk brand in Rajasthan. Aims towards making people aware about best natural dairy farming tips and practices.</string>
    <string name="Email1">navroopsingh58rb@gmail.com</string>
    <string name="Contact1">9988996543</string>
    <string name="AwardsandRecognition1">---</string>
    <string name="Expertise1">Dairy Farming , Organic Fertilizers , Organic Farming , Soap Making</string>
    <string name="Qualification1">Engineer</string>
    <string name="Profile2">Gurpreet Singh Shergill is working as a professional floriculturist in the farming field from past 20 years. Passion for cultivating flowers can be traced in his strong demonstrated history of floriculture where he has cultivated variety of horticulture crops. With the desire to pursue his lifetime career in floriculture he has developed his own brand- Shergill Farm Fresh which is famous in Punjab for its Rose Sharbat, Aloe Vera Juice and Amla Juice. Utilize his innovative skills in managing the natural resources and in developing machines to ease the farm work. One of his greatest invention is Gladiolus Bulb Grading Machine. Along with floriculture he is also involved in dairy farming, conventional agriculture, and vermin-culture practices. With his strong experience and expertise, he look towards upgrading the agriculture society by helping the farmers.</string>
    <string name="Email2">shergill_farms@yahoo.com</string>
    <string name="Contact2">9876123456</string>
    <string name="AwardsandRecognition2">Received Punjab Chief Minister Award by PAU, Ludhiana in 2011. Received Jagjivan Ram Innovative Farmer Award by ICAR, New Delhi in 2012. •	Received N.G. Ranga Farmer Award by ICAR, New Delhi in 2014. •	Received Innovative Farmer Award by IARI, New Delhi in 2015.</string>
    <string name="Expertise2">Floriculture, Fish Farming, Rose and Amla Juice</string>
    <string name="Qualification2">Diploma in Mechanical Engineering</string>
    <string name="Profile3">Harvinder is a Graduate in B.Sc. agriculture honors from Guru Kashi University. He has been actively involved in agriculture from childhood and helped his father and brother, where he gained good knowledge about traditional agriculture practices.. He has also worked with a private company and learned about organic farming, vermin compost and other organic farming practices. At the young age of 17 years he was nominated by the Indian Government to visit Japan to learn about the agricultural practices and lifestyle followed in Japan. Harvinder also spent a short span of his career working as an advisor with IFFCO (KCC) and is now associated with ApniKheti.</string>
    <string name="Email3">harvinder.apnikheti@gmail.com</string>
    <string name="Contact3">8967344400</string>
    <string name="AwardsandRecognition3"> --- </string>
    <string name="Expertise3">Pest control and disease treatment Organic fertilizer Irrigation Crops and horticulture</string>
    <string name="Qualification3">B.Sc. Agriculture (Hons)</string>
    <string name="Profile4">Navdeep Singh Gill is among those knowledgeable farmers who have supported sustainable agriculture practices since he started farming. With his 30 years of experience in the field of farming he aims to look towards implementing eco-friendly farming technologies and utilizing natural resources cautiously to make earth a better place. Practicing natural farming from last 10 years, he has demonstrated a strong history of cultivating Cereals, Legumes, Oilseeds and Horticulture crops with great expertise. With his farming background and entrepreneurship quality, he is running his own brand – Thar Naturals, to sell his naturally harvested crops. Currently his main goal is to contribute his knowledge accumulated throughout his farming years to the farmer society and help them raise globally. For his tremendous contribution towards natural farming he is awarded with Krishak Samman Puraskar in 2016.</string>
    <string name="Email4">gillnavdeeps045@gmail.com</string>
    <string name="Contact4">9463782011</string>
    <string name="AwardsandRecognition4"> Receive Krishak Samman Puraskar, 2016 .Till now organized three Organic Prashikshan Seminar to help the farmers.</string>
    <string name="Expertise4">Organic Farming, Horticulture, Dairy Farming</string>
    <string name="Qualification4">B.com</string>
    <string name="Profile5">Dr. Ramandeep Singh, Professor of Business Management, Punjab Agriculture University and his team are instrumental in promoting the concepts of Progressive Farming and Agri Business in Punjab through digital marketing and social media. Dr. Ramandeep Singh has been able to motivate farmers to pursue the challenging path of agri-preneurship. He and his team have guided the farmers to develop new products and concepts that have greater acceptability amongst the consumers, and in the process helped them to supplement their incomes and also forge linkages between the farmers, the agriculture supply chain and the consumers. These initiatives will contribute to the well being of the farming community and also enable them to adopt best global practices for entering the global markets.</string>
    <string name="Email5">ramandeep@pau.edu</string>
    <string name="Contact5">8834962100</string>
    <string name="AwardsandRecognition5">---</string>
    <string name="Expertise5">Marketing Management, Research Interests, Agri-business Management, Agri-marketing , Entrepreneurship Development</string>
    <string name="Qualification5">B.Sc.(Forestry), Punjab Agricultural University, Ludhiana (1986-91); MBA, Punjabi University, Patiala (1991-93); Ph.D.(Business Management); Guru Nanak Dev University, Amritsar, (2002-05)</string>
    <string name="Profile6">Working as web content manager in ApniKheti. Me and my team, access and assimilate crop advisory content from trusted sources then create advisories through collected information. Along with content preparation, I am interested in to assist farmer on a number of areas, including cultivation, pest and disease management and harvesting. Agriculture is back bone of India and I want to work for well-being of Farmer.</string>
    <string name="Email6">pavitarsinghdhummi@gmail.com</string>
    <string name="Contact6">7666894431</string>
    <string name="AwardsandRecognition6">---</string>
    <string name="Expertise6">Pest and Disease Management, Cultivation, Fertilization, Harvesting</string>
    <string name="Qualification6">Master of Technology in Soil and Water Engineering</string>
    <string name="Profile7">Trained in Jojoba Plantation and farming from Jaipur, Hind Pal Singh is one of the rising horticulturist from the land of Rajasthan. He is doing Jojoba farming from 12 years in 2 hectares of area and is generating good profit from it. He has guided many farmers of his area towards jojoba farming and will keep doing it in the future also. He use mechanized and modern ways for farming and marketing and that has made him expert in his work</string>
    <string name="Email7">hindpal@ymail.com</string>
    <string name="Contact7">9876123477</string>
    <string name="AwardsandRecognition7">---</string>
    <string name="Expertise7">Jojoba Farming</string>
    <string name="Qualification7">Bachelors in Hotel Management</string>
    <string name="Profile8">Mittali Sharma is an M.Sc. in Botany from Punjab University and has done her research work in Candium effects on Wheat. As a young research fellow she has expanded her research area from crops to livestock as well, covering total of 500 + crop varieties and 200 + animal breeds. She had been continuously following her passion of research on Agri Industry and regularly serving the cause dear to her heart, farming. Experience of 5 years in Botany Research Work- Cadmium effect on Wheat</string>
    <string name="Email8">mittalisharma5716@gmail.com</string>
    <string name="Contact8">9993338765</string>
    <string name="AwardsandRecognition8">---</string>
    <string name="Expertise8">Agriculture Research</string>
    <string name="Qualification8">M.Sc. in Botany, B.Sc. in Bioinformatics</string>
    <string name="Profile10">Nishandeep was doing private job as a teacher in Patti, Tarn Taran. But now he is doing organic farming for home. He grows crops are wheat, paddy, basmati, pea,moongi,mah,sarho, toriya, makki from last 7-8 years.</string>
    <string name="Email10">nishansingh11@gmail.com</string>
    <string name="Contact10">8800654432</string>
    <string name="AwardsandRecognition10">---</string>
    <string name="Expertise10">Crops(wheat, paddy, basmati, pea,moongi,mah,sarho, toriya, makki)</string>
    <string name="Qualification10">B.A. and ETT</string>
    <string name="titleRegister">Register</string>
    <string name="phoneHint">Mobile Number</string>
    <string name="nameHint">Name</string>
    <string name="btnNext">Next</string>
    <string name="titleValidation">Enter Validation Code</string>
    <string name="otphint">A OTP has been sent to you</string>
    <string name="btnVerify">Verify</string>
    <string name="barley" translatable="false">Barley is an annual plant, which means that it ends its life cycle in one year.The greatest quantity of produced barley is used as animal food.</string>
    <string name="barleySoil" translatable="false">Barley can be grown on a wide range of soil types;ranging from heavy clays to light or sandy loam soils.It grows well on fertile, deep loam soils with a pH of 6
to 7, 5. Soils with a pH lower than 6 may induce aluminium toxicity, leading to poor growth.</string>
    <string name="barleyIrrigation" translatable="false">Irrigation scheduling must be done according to evaporation and as per growth stage, because barley is more sensitive to stress during jointing, booting and heading.</string>
    <string name="barleyHarvest" translatable="false">Barley is ready for harvest in about 4 months after sowing.Barley can be harvested manually under small scale or combine harvesters can be used in large production scales</string>
    <string name="rice" translatable="false">Rice is the most important human food crop in the world, directly feeding more people than any other crop.</string>
    <string name="riceSoil" translatable="false">Good amount of clay and organic matter are considered ideal for rice cultivation. It grows well in soils having a pH range between 5.5 and 6.5.</string>
    <string name="riceIrrigation" translatable="false"> Rice is typically grown in bunded fields that are continuously flooded up to 7−10 days before harvest. Continuous flooding helps ensure sufficient water and control weeds. On average, it takes 1,432 liters of water to produce 1 kg of rice in an irrigated lowland production system.</string>
    <string name="riceHarvest" translatable="false">Depending on the variety, a rice crop usually reaches maturity at around 105–150 days after crop establishment. Harvesting activities include cutting, stacking, handling, threshing, cleaning, and hauling.</string>
</resources>