<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.otpActivity"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textViewEnter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titleValidation"
            android:textSize="20dp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="35dp"/>

        <EditText
            android:id="@+id/editTextOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/otphint"
            android:layout_marginTop="30dp"
            android:textColor="@color/colorBlack"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/buttonVerify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnVerify"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorBlack"
            android:textSize="15dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"/>
    </LinearLayout>
</android.support.v7.widget.CardView>