<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.BarleyActivity">


        <TextView
            android:id="@+id/textViewGen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="General Information"
            android:background="@color/colorYellow"
            android:textSize="20dp"
            android:textColor="@color/colorBlack"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/textViewInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/barley"
            android:textColor="@color/colorBlack"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/textViewSoil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Soil"
            android:background="@color/colorYellow"
            android:textSize="20dp"
            android:textColor="@color/colorBlack"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/textViewSoilinf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/barleySoil"
            android:textColor="@color/colorBlack"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/textViewSoilIrri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Irrigation"
            android:background="@color/colorYellow"
            android:textSize="20dp"
            android:textColor="@color/colorBlack"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/textViewIrriinf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/barleyIrrigation"
            android:textColor="@color/colorBlack"
            android:padding="10dp"/>


        <TextView
            android:id="@+id/textViewSoilHar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Harvesting"
            android:background="@color/colorYellow"
            android:textSize="20dp"
            android:textColor="@color/colorBlack"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/textViewHariinf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/barleyHarvest"
            android:textColor="@color/colorBlack"
            android:padding="10dp"/>


    </LinearLayout>
</ScrollView>